@@ -342,10 +342,21 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin, ldn
 					/* unknown RR data */
 					if (rd_strlen == 2 && strncmp(rd, "\\#", 2) == 0 && !quoted) {
 						c = ldns_bget_token(rd_buf, rd, delimiters, LDNS_MAX_RDFLEN);
-						/* c can be -1 .. XXX TODO jelte */
+						if (c == -1) {
+							/* something goes very wrong here */
+							ldns_buffer_free(rd_buf);
+							LDNS_FREE(rd);
+							return NULL;
+						}
 						hex_data_size = (uint16_t) atoi(rd);
 						/* copy the hex chars into hex str (which is 2 chars per byte) */
 						hex_data_str = LDNS_XMALLOC(char, 2 * hex_data_size + 1);
+						if (!hex_data_str) {
+							/* malloc error */
+							ldns_buffer_free(rd_buf);
+							LDNS_FREE(rd);
+							return NULL;
+						}
 						cur_hex_data_size = 0;
 						while(cur_hex_data_size < 2 * hex_data_size) {
 							c = ldns_bget_token(rd_buf, rd, delimiters, LDNS_MAX_RDFLEN);
