@@ -41,6 +41,7 @@
 	* tsig.h: made internal used functions static:
 	  ldns_digest_name and ldns_tsig_mac_new
 	New:
+	* ldns_resolver_searchlist_count: return the searchlist counter
 	* ldns_zone_sort: Sort a zone
 	* ldns_bgsend(): background send, returns a socket.
 	Removed:
